Add check for invalid embedded images

Some enclosures have non-empty embedded images which are not pictures.
This add a check which discards those, and then falls back to a valid
image.

BUG: 480263